changes to readme

--- a/README
+++ b/README
@@ -9,4 +9,4 @@
 - First create a folder in your computer where you will save the automations, you can name it however you like 
 - Open Visual Studio and navigate to the folder you just created 
 - Open a new terminal 
-![imagen_terminal](terminal.png)
+![imagen_terminal](./terminal.png)
